@startuml ServiceType-Class-Diagram

title BookingCare ServiceType Service - Class Diagram

hide circle
skinparam classAttributeIconSize 0
skinparam linetype ortho
skinparam nodesep 50
skinparam ranksep 50
skinparam classBackgroundColor White
skinparam classBorderColor Black
skinparam wrapWidth 220
skinparam maxMessageSize 220

' ========== PRESENTATION LAYER ==========
class ServiceTypesController {
    - _serviceTypeService: IServiceTypeService
    + GetServiceType(id): Task<IActionResult>
    + CreateServiceType(request): Task<IActionResult>
    + UpdateServiceType(id, request): Task<IActionResult>
    + DeleteServiceType(id): Task<IActionResult>
    + GetServiceTypes(query): Task<IActionResult>
    + ToggleServiceTypeStatus(id): Task<IActionResult>
}

' ========== SERVICE LAYER ==========
interface IServiceTypeService {
    + CreateServiceTypeAsync(request): Task<ServiceTypeResponse>
    + GetServiceTypeByIdAsync(id): Task<ServiceTypeResponse?>
    + UpdateServiceTypeAsync(request): Task<ServiceTypeResponse>
    + DeleteServiceTypeAsync(id): Task<bool>
    + ToggleServiceTypeStatusAsync(id): Task<bool>
    + GetServiceTypesAsync(query): Task<ServiceTypeListResponse>
}

class ServiceTypeService {
    - _repository: IServiceTypeRepository
    - _mapper: IMapper
    - _logger: ILogger
    + CreateServiceTypeAsync(request): Task<ServiceTypeResponse>
    + GetServiceTypeByIdAsync(id): Task<ServiceTypeResponse?>
    + UpdateServiceTypeAsync(request): Task<ServiceTypeResponse>
    + DeleteServiceTypeAsync(id): Task<bool>
    + GetServiceTypesAsync(query): Task<ServiceTypeListResponse>
}

' ========== REPOSITORY LAYER ==========
interface IServiceTypeRepository {
    + GetServiceTypeByIdAsync(id): Task<ServiceTypeEntity?>
    + CreateServiceTypeAsync(serviceType): Task<ServiceTypeEntity>
    + UpdateServiceTypeAsync(serviceType): Task<ServiceTypeEntity>
    + DeleteServiceTypeAsync(id): Task<bool>
    + GetServiceTypesAsync(query): Task<(List<ServiceTypeEntity>, int)>
}

class ServiceTypeRepository {
    - _context: DoctorDbContext
    + GetServiceTypeByIdAsync(id): Task<ServiceTypeEntity?>
    + CreateServiceTypeAsync(serviceType): Task<ServiceTypeEntity>
    + UpdateServiceTypeAsync(serviceType): Task<ServiceTypeEntity>
    + DeleteServiceTypeAsync(id): Task<bool>
}

' ========== DATA LAYER ==========
class DoctorDbContext {
    + ServiceTypes: DbSet<ServiceTypeEntity>
}

' ========== ENTITIES ==========
class ServiceTypeEntity {
    + Id: Guid
    + Name: string
    + Description: string?
    + ImageUrl: string
    + Status: Status
    + CreatedAt: DateTime
    + UpdatedAt: DateTime
}

' ========== DTOs ==========
class CreateServiceTypeRequest {
    + Name: string
    + Description: string?
    + ImageUrl: string
    + Status: Status
}

class ServiceTypeQueryRequest {
    + SearchTerm: string?
    + Status: string?
    + PageNumber: int
    + PageSize: int
}

class ServiceTypeResponse {
    + Id: Guid
    + Name: string
    + Description: string?
    + ImageUrl: string
    + Status: Status
}

class ServiceTypeListResponse {
    + ServiceTypes: List<ServiceTypeResponse>
    + TotalCount: int
    + PageNumber: int
    + PageSize: int
    + TotalPages: int
}

' ========== LAYOUT HINTS ==========
ServiceTypesController -[hidden]down- IServiceTypeService
IServiceTypeService -[hidden]down- IServiceTypeRepository
IServiceTypeRepository -[hidden]down- DoctorDbContext

' ========== RELATIONSHIPS ==========

' Controller Layer
ServiceTypesController *-- IServiceTypeService

' Service Layer
ServiceTypeService ..|> IServiceTypeService
ServiceTypeService *-- IServiceTypeRepository
ServiceTypeService o-- IMapper

' Repository Layer
ServiceTypeRepository ..|> IServiceTypeRepository
ServiceTypeRepository *-- DoctorDbContext

' Service Uses DTOs
IServiceTypeService ..> CreateServiceTypeRequest
IServiceTypeService ..> ServiceTypeQueryRequest
IServiceTypeService ..> ServiceTypeResponse

' Repository Uses Entities
IServiceTypeRepository ..> ServiceTypeEntity

@enduml